--- a/styles/global.css
+++ b/styles/global.css
@@ -10,13 +10,13 @@ box-sizing: border-box;
   --stroke-color: #1E293B ;
  --text-color-primary: #F1F5F9 ;
  --text-color-secondary:#CBD5E1 ;
- --font-family: "Archivo", sans-serif;
+ --font-family: "Fira Sans", sans-serif;
  --h1:800 24px/135% var(--font-family);
  --h2:800 16px/140% var(--font-family);
  --h3:800 14px/140% var(--font-family);
  --text-span:600 14px/145% var(--font-family);
  --text-:400 16px/140% var(--font-family);
- --text-sm:400 14px/160% var(--font-family) ;
+ --text-sm:400 14px/160% var(--font-family);
 
 }
 
@@ -36,4 +36,19 @@ a:hover{
 }
 h1,h2,h3{
   font: inherit;
+ 
+}
+
+.container{
+  max-width: 1280px;
+  padding-inline: 32px;
+  margin-inline: auto;
+}
+
+.grid {
+display: grid;
+}
+
+.grid-flow-col {
+  grid-auto-flow: column;
 }
