--- a/styles/sections.css
+++ b/styles/sections.css
@@ -1,7 +1,51 @@
+section header {
+  border-top: 1px solid var(--stroke-color);
+  padding-block: 12px 24px;
+  font: var(--text-span);
+  a {
+    justify-self: end;
+    align-items:center;
+    gap: 8px;
+  
+    
+    }
+    &:hover span a {
+    background-image: url(../assets/Icons/ArrowRight.svghover);
+    width:16px;
+    height:16px;
+    }
+    span {
+      background-image: url(../assets/Icons/ArrowRight2.svg);
+      width:16px;
+      height:16px;
+  
+}
+}
 #featured{
   img {
     height: 100%;
     object-fit: cover;
+  }
+}
+#weekly{
+  
+  &>div {
+    grid-template-columns: repeat(4, 292px) ;
+  }
+  img{
+    height: 160px;
+  }
+  figure {
+    position:relative;
+    .content-tag {
+      position: absolute;
+      top:8px;
+      left:8px;
+    }
+    p{
+     margin-top:8px;
+     font-weight:800;
+    }
   }
 }
 
