--- a/styles/global.css
+++ b/styles/global.css
@@ -47,8 +47,13 @@ h1,h2,h3{
     margin-inline: auto;
   }
 main{
-margin-top: 40px;
-gap:80px;
+margin-block: 40px;
+row-gap:80px;
+column-gap: 12px;
+grid-template-columns:2fr 1.3fr ;
+
+grid-template-areas: "featured featured"
+"weekly weekly" "ai aside";
 }
 .content-tag{
   display: inline-block;
